--- a/app/src/main/res/layout/li_statistic.xml
+++ b/app/src/main/res/layout/li_statistic.xml
@@ -9,11 +9,14 @@
         android:id="@+id/tvTotalDuration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:text="0s"
-        app:layout_constraintBottom_toBottomOf="@+id/ivDelete"
+        android:textColor="@color/md_black_1000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ivDelete"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ProgressBar
         android:id="@+id/progressPercentage"
@@ -22,20 +25,30 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/ivDelete"
+        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toRightOf="@+id/tvTotalDuration"
         app:layout_constraintRight_toLeftOf="@+id/ivDelete"
-        app:layout_constraintTop_toTopOf="@+id/ivDelete"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
         android:id="@+id/ivDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_delete"/>
+
+    <TextView
+        android:id="@+id/tvStartDate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/progressPercentage"
+        app:layout_constraintRight_toRightOf="@+id/progressPercentage"
+        app:layout_constraintTop_toBottomOf="@+id/progressPercentage"
+        app:layout_constraintVertical_bias="0.45"/>
 </android.support.constraint.ConstraintLayout>
