--- a/app/src/main/res/layout/page_main.xml
+++ b/app/src/main/res/layout/page_main.xml
@@ -39,7 +39,7 @@
     <view
         android:id="@+id/soundMeter"
         class="ridvan.snorelistener.views.SoundMeterView"
-        android:layout_width="365dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
@@ -53,13 +53,10 @@
         android:id="@+id/switchVibration"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
         android:text="@string/vibration"
-        app:layout_constraintBottom_toBottomOf="@+id/soundMeter"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/soundMeter"
+        app:layout_constraintLeft_toLeftOf="@+id/switchWearVibration"
+        app:layout_constraintRight_toRightOf="@+id/switchWearVibration"
+        app:layout_constraintTop_toBottomOf="@+id/switchWearVibration"
         />
 
     <TextView
@@ -87,5 +84,17 @@
         app:layout_constraintLeft_toLeftOf="@+id/tvTitle"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>
+
+    <Switch
+        android:id="@+id/switchWearVibration"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/vibration_for_wear"
+        app:layout_constraintBottom_toBottomOf="@+id/soundMeter"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
