--- a/app/src/main/res/layout/page_main.xml
+++ b/app/src/main/res/layout/page_main.xml
@@ -44,8 +44,8 @@
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/ivRecordButton"
-        app:layout_constraintRight_toRightOf="@+id/ivRecordButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3"/>
 
