--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              android:fitsSystemWindows="true"
-                                             tools:context="ridvan.snorelistener.activities.SplashActivity">
+                                             tools:context="ridvan.wakbaz.activities.SplashActivity">
 
     <ImageView
         android:id="@+id/ivElectric"
