--- a/app/src/main/res/layout/page_main.xml
+++ b/app/src/main/res/layout/page_main.xml
@@ -38,7 +38,7 @@
 
     <view
         android:id="@+id/soundMeter"
-        class="ridvan.snorelistener.views.SoundMeterView"
+        class="ridvan.wakbaz.views.SoundMeterView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
